# EDGA

./: CMakeLists.txt
glsl/: fragment.glsl  fragment2.glsl  vertex.glsl
src/: Shader.cpp  Shader.h  main.cpp
